--- a/style.css
+++ b/style.css
@@ -351,35 +351,32 @@ section#points-of-sale ul{
     height: 100%;
 }
 
+.rslides {
+  position: relative;
+  list-style: none;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+  }
 
-.slide-button-up,
-.slide-button-down{
-    clear: right;
-    margin-top: 20px;
-    padding: 10px;
-    background: #ccc;
-    border-radius: 4px;
-    border: 1px solid #aaa;
-    color: #333;
-    cursor: pointer;
-    width: 140px;
-    text-align: center;
-    margin: 10px auto;
-}
+.rslides li {
+  -webkit-backface-visibility: hidden;
+  position: absolute;
+  display: none;
+  width: 100%;
+  left: 0;
+  top: 0;
+  }
 
+.rslides li:first-child {
+  position: relative;
+  display: block;
+  float: left;
+  }
+  
 blockquote{
-    display: none;
+  width: 100% !important;
 }
-
-blockquote:first-of-type{
-    display: block;
-}
-
-#points-of-sale li p{
-    display: none;
-}
-
-
 
 
 
